--- a/video.html
+++ b/video.html
@@ -10,17 +10,28 @@
             top: 0;
             left: 0;
         }
+        #info {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 5px;
+            font-family: Arial, sans-serif;
+        }
     </style>
 </head>
 <body>
     <canvas id="cameraCanvas" width="512" height="512"></canvas>
+    <div id="info">Prediction time: <span id="time">0</span> ms</div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script>
         let video;
         let cameraCanvas = document.getElementById('cameraCanvas');
         let cameraCtx = cameraCanvas.getContext('2d');
-
+        let timeElement = document.getElementById('time');
+        
         let model;
 
         // Загрузка модели
@@ -53,32 +64,20 @@
                                         .div(255.0)
                                         .expandDims();
 
-/*            // Прогоняем через модель
+            // Замер времени предсказания
+            const startTime = performance.now();
+
+            // Прогоняем через модель
             const predictions = await model.predict(imageTensor);
 
-            // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
-            const unetMask = predictions;
-            const unetMaskArray = unetMask.dataSync();
+            const endTime = performance.now();
+            const predictionTime = endTime - startTime;
 
-            // Создание изображения для маски
-            const maskImageData = cameraCtx.createImageData(224, 224);
+            // Вывод времени предсказания
+            timeElement.textContent = predictionTime.toFixed(2);
 
-            for (let y = 0; y < 224; y++) {
-                for (let x = 0; x < 224; x++) {
-                    const value = unetMaskArray[y * 224 + x] * 255;  // Приведение значений к диапазону [0, 255]
-                    const index = (y * 224 + x) * 4;
-                    maskImageData.data[index + 0] = value;       // R
-                    maskImageData.data[index + 1] = value;       // G
-                    maskImageData.data[index + 2] = value;       // B
-                    maskImageData.data[index + 3] = 100;         // A (прозрачность маски)
-                }
-            }
+            // Здесь продолжается код с обработкой предсказанной маски...
 
-            // Масштабируем маску до размеров холста (512x512) и накладываем поверх видео
-            cameraCtx.putImageData(maskImageData, 0, 0);
-           // cameraCtx.globalAlpha = 0.5;  // Устанавливаем прозрачность для маски
-            //cameraCtx.drawImage(maskImageData, 0, 0, 512, 512);
-*/
             requestAnimationFrame(processVideoFrame); // Повторяем обработку
         }
 
