--- a/video.html
+++ b/video.html
@@ -55,28 +55,27 @@
 
         // Обработка каждого кадра с камеры
         async function processVideoFrame() {
-            // Отображаем изображение с камеры
             cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
-            // Преобразование изображения в тензор
-            let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
-                                        .resizeBilinear([224, 224])
-                                        .div(255.0)
-                                        .expandDims();
+            // Преобразование изображения в тензор и очистка памяти
+            tf.tidy(() => {
+                let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
+                                            .resizeBilinear([224, 224])
+                                            .div(255.0)
+                                            .expandDims();
 
-            // Замер времени предсказания
-            const startTime = performance.now();
+                // Замер времени предсказания
+                const startTime = performance.now();
 
-            // Прогоняем через модель
-            const predictions = await model.predict(imageTensor);
+                // Прогоняем через модель и освобождаем память после использования
+                model.predict(imageTensor).then(predictions => {
+                    const endTime = performance.now();
+                    const predictionTime = endTime - startTime;
+                    timeElement.textContent = predictionTime.toFixed(2);
 
-            const endTime = performance.now();
-            const predictionTime = endTime - startTime;
-
-            // Вывод времени предсказания
-            timeElement.textContent = predictionTime.toFixed(2);
-
-            // Здесь продолжается код с обработкой предсказанной маски...
+                    // Здесь продолжение обработки маски, если необходимо
+                });
+            });
 
             requestAnimationFrame(processVideoFrame); // Повторяем обработку
         }
