--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
             top: 0;
             left: 0;
         }
-        #info {
+        #info, #error {
             position: absolute;
             top: 10px;
             left: 10px;
@@ -19,11 +19,16 @@
             padding: 5px;
             font-family: Arial, sans-serif;
         }
+        #error {
+            top: 50px; /* Ошибки будут ниже */
+            color: red; /* Красный цвет для ошибок */
+        }
     </style>
 </head>
 <body>
     <canvas id="cameraCanvas" width="512" height="512"></canvas>
     <div id="info">Prediction time: <span id="time">0</span> ms</div>
+    <div id="error">No errors</div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script>
@@ -31,51 +36,74 @@
         let cameraCanvas = document.getElementById('cameraCanvas');
         let cameraCtx = cameraCanvas.getContext('2d');
         let timeElement = document.getElementById('time');
+        let errorElement = document.getElementById('error');
         
         let model;
 
+        // Функция для отображения ошибки
+        function showError(message) {
+            errorElement.textContent = message;
+        }
+
         // Загрузка модели
         async function loadModel() {
-            model = await tf.loadLayersModel('./jsModel/model.json');
-            console.log("Модель загружена");
+            try {
+                model = await tf.loadLayersModel('./jsModel/model.json');
+                console.log("Модель загружена");
+            } catch (error) {
+                showError("Ошибка загрузки модели: " + error.message);
+            }
         }
 
         // Инициализация камеры
         async function setupCamera() {
-            video = document.createElement('video');
-            const stream = await navigator.mediaDevices.getUserMedia({
-                video: { facingMode: { exact: "environment" } }
-            });
-            video.srcObject = stream;
-            video.play();
-            video.addEventListener('loadeddata', () => {
-                processVideoFrame(); // Начинаем обработку
-            });
+            try {
+                video = document.createElement('video');
+                const stream = await navigator.mediaDevices.getUserMedia({
+                    video: { facingMode: { exact: "environment" } }
+                });
+                video.srcObject = stream;
+                video.play();
+                video.addEventListener('loadeddata', () => {
+                    processVideoFrame(); // Начинаем обработку
+                });
+            } catch (error) {
+                showError("Ошибка доступа к камере: " + error.message);
+            }
         }
 
         // Обработка каждого кадра с камеры
         async function processVideoFrame() {
-            cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
+            try {
+                if (video.readyState === video.HAVE_ENOUGH_DATA) {
+                    // Отображаем изображение с камеры
+                    cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
-            // Преобразование изображения в тензор и очистка памяти
-            tf.tidy(() => {
-                let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
-                                            .resizeBilinear([224, 224])
-                                            .div(255.0)
-                                            .expandDims();
+                    // Преобразование изображения в тензор и очистка памяти
+                    tf.tidy(() => {
+                        let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
+                                                    .resizeBilinear([224, 224])
+                                                    .div(255.0)
+                                                    .expandDims();
 
-                // Замер времени предсказания
-                const startTime = performance.now();
+                        // Замер времени предсказания
+                        const startTime = performance.now();
 
-                // Прогоняем через модель и освобождаем память после использования
-                model.predict(imageTensor).then(predictions => {
-                    const endTime = performance.now();
-                    const predictionTime = endTime - startTime;
-                    timeElement.textContent = predictionTime.toFixed(2);
+                        // Прогоняем через модель и освобождаем память после использования
+                        model.predict(imageTensor).then(predictions => {
+                            const endTime = performance.now();
+                            const predictionTime = endTime - startTime;
+                            timeElement.textContent = predictionTime.toFixed(2);
 
-                    // Здесь продолжение обработки маски, если необходимо
-                });
-            });
+                            // Здесь можно продолжить обработку маски
+                        }).catch(error => {
+                            showError("Ошибка при предсказании: " + error.message);
+                        });
+                    });
+                }
+            } catch (error) {
+                showError("Ошибка в процессе обработки кадров: " + error.message);
+            }
 
             requestAnimationFrame(processVideoFrame); // Повторяем обработку
         }
