--- a/video.html
+++ b/video.html
@@ -79,7 +79,7 @@
                     // Отображаем изображение с камеры
                     cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
-                    // Преобразование изображения в тензор и очистка памяти
+                    // Преобразование изображения в тензор
                     tf.tidy(() => {
                         let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
                                                     .resizeBilinear([224, 224])
@@ -89,16 +89,17 @@
                         // Замер времени предсказания
                         const startTime = performance.now();
 
-                        // Прогоняем через модель и освобождаем память после использования
-                        model.predict(imageTensor).then(predictions => {
-                            const endTime = performance.now();
-                            const predictionTime = endTime - startTime;
-                            timeElement.textContent = predictionTime.toFixed(2);
+                        // Прогоняем через модель
+                        const predictions = model.predict(imageTensor);
 
-                            // Здесь можно продолжить обработку маски
-                        }).catch(error => {
-                            showError("Ошибка при предсказании: " + error.message);
-                        });
+                        // Замер времени завершения предсказания
+                        const endTime = performance.now();
+                        const predictionTime = endTime - startTime;
+                        timeElement.textContent = predictionTime.toFixed(2);
+
+                        // Здесь можно продолжить обработку маски
+                        // Например, получение данных предсказания:
+                        // const unetMaskArray = predictions.dataSync();
                     });
                 }
             } catch (error) {
