--- a/video.html
+++ b/video.html
@@ -128,7 +128,8 @@
         }
 
         // Инициализация: загрузка модели и установка камеры
-        loadModel().then(setupCamera);
+        loadModel();
+        setupCamera();
     </script>
 </body>
 </html>
