--- a/video.html
+++ b/video.html
@@ -30,7 +30,7 @@
     <div id="info">Prediction time: <span id="time">0</span> ms</div>
     <div id="error">No errors</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script>
         let video;
         let cameraCanvas = document.getElementById('cameraCanvas');
