--- a/video.html
+++ b/video.html
@@ -90,7 +90,7 @@
 
 
                     // Прогоняем через модель
-                    const predictions = await model.predict(imageTensor);
+                    const predictions = model.predict(imageTensor);
 
 /*
 
