--- a/video.html
+++ b/video.html
@@ -76,7 +76,7 @@
         async function processVideoFrame() {
             try {
                 if (video.readyState === video.HAVE_ENOUGH_DATA) {
-                    const startTime = performance.now();
+   /*                 const startTime = performance.now();
                     // Отображаем изображение с камеры
                     cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
@@ -92,7 +92,7 @@
                     // Прогоняем через модель
                   //  const predictions = await model.predict(imageTensor);
 
-/*
+
 
                     // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
                   //  const unetMaskArray = predictions[0];  // Получаем первую (и единственную) маску
@@ -114,10 +114,10 @@
 
                     // Масштабируем маску до размеров холста (512x512) и накладываем поверх видео
                     cameraCtx.putImageData(maskImageData, 0, 0);
-                    */
+                    
                     // Очистка ресурсов
                     imageTensor.dispose();
-                                        // Замер времени завершения предсказания
+                                        // Замер времени завершения предсказания*/
                     const endTime = performance.now();
                     const predictionTime = endTime - startTime;
                     timeElement.textContent = predictionTime.toFixed(2);
