--- a/video.html
+++ b/video.html
@@ -76,7 +76,8 @@
         async function processVideoFrame() {
             try {
                 if (video.readyState === video.HAVE_ENOUGH_DATA) {
-   /*                 const startTime = performance.now();
+                    const startTime = performance.now();
+                    /*
                     // Отображаем изображение с камеры
                     cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
