--- a/video.html
+++ b/video.html
@@ -38,9 +38,21 @@
         let timeElement = document.getElementById('time');
         let errorElement = document.getElementById('error');
 
+        let model;
+
         // Функция для отображения ошибки
         function showError(message) {
             errorElement.textContent = message;
+        }
+
+        // Загрузка модели
+        async function loadModel() {
+            try {
+                model = await tf.loadLayersModel('./jsModel/model.json');
+                console.log("Модель загружена");
+            } catch (error) {
+                showError("Ошибка загрузки модели: " + error.message);
+            }
         }
 
         // Инициализация камеры
@@ -61,7 +73,7 @@
         }
 
         // Обработка каждого кадра с камеры
-        function processVideoFrame() {
+        async function processVideoFrame() {
             try {
                 if (video.readyState === video.HAVE_ENOUGH_DATA) {
                     const startTime = performance.now();
@@ -70,12 +82,48 @@
                     cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
                     // Вставка временной задержки для предотвращения перегрузки
-                    setTimeout(() => {
-                        // Вставьте здесь код для обработки кадров, если необходимо
+                    setTimeout(async () => {
+                        try {
+                            // Преобразование изображения в тензор
+                            const imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
+                                                       .resizeBilinear([224, 224])
+                                                       .div(255.0)
+                                                       .expandDims();
 
-                        const endTime = performance.now();
-                        const predictionTime = endTime - startTime;
-                        timeElement.textContent = predictionTime.toFixed(2);
+                            // Прогоняем через модель
+                            const predictions = await model.predict(imageTensor);
+
+                            // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
+                            const unetMaskArray = predictions.dataSync(); // Преобразование в массив
+
+                            // Создание изображения для маски
+                            const maskImageData = cameraCtx.createImageData(224, 224);
+
+                            for (let y = 0; y < 224; y++) {
+                                for (let x = 0; x < 224; x++) {
+                                    const value = unetMaskArray[y * 224 + x] * 255;  // Приведение значений к диапазону [0, 255]
+                                    const index = (y * 224 + x) * 4;
+                                    maskImageData.data[index + 0] = value;       // R
+                                    maskImageData.data[index + 1] = value;       // G
+                                    maskImageData.data[index + 2] = value;       // B
+                                    maskImageData.data[index + 3] = 100;         // A (прозрачность маски)
+                                }
+                            }
+
+                            // Масштабируем маску до размеров холста (512x512) и накладываем поверх видео
+                            cameraCtx.putImageData(maskImageData, 0, 0);
+
+                            // Очистка ресурсов
+                            imageTensor.dispose();
+                            predictions.dispose(); // Очистка ресурсов
+
+                            // Замер времени завершения предсказания
+                            const endTime = performance.now();
+                            const predictionTime = endTime - startTime;
+                            timeElement.textContent = predictionTime.toFixed(2);
+                        } catch (error) {
+                            showError("Ошибка в процессе обработки предсказания: " + error.message);
+                        }
 
                         // Запускаем следующий кадр
                         requestAnimationFrame(processVideoFrame);
@@ -89,7 +137,8 @@
             }
         }
 
-        // Инициализация: установка камеры
+        // Инициализация: загрузка модели и установка камеры
+        loadModel();
         setupCamera();
     </script>
 </body>
