--- a/video.html
+++ b/video.html
@@ -41,46 +41,49 @@
                 processVideoFrame(); // Начинаем обработку
             });
         }
+async function processVideoFrame() {
+    // Отображаем изображение с камеры
+    cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
 
-        // Обработка каждого кадра с камеры
-        async function processVideoFrame() {
-            // Отображаем изображение с камеры
-            cameraCtx.drawImage(video, 0, 0, cameraCanvas.width, cameraCanvas.height);
+    // Преобразование изображения в тензор
+    let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
+                                .resizeBilinear([224, 224])
+                                .div(255.0)
+                                .expandDims();
 
-            // Преобразование изображения в тензор
-            let imageTensor = tf.browser.fromPixels(cameraCanvas, 3)
-                                        .resizeBilinear([224, 224])
-                                        .div(255.0)
-                                        .expandDims();
+    try {
+        // Прогоняем через модель
+        const predictions = await model.predict(imageTensor);
 
-            // Прогоняем через модель
-            const predictions = await model.predict(imageTensor);
+        // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
+        const unetMask = predictions;
+        const unetMaskArray = unetMask.dataSync(); // Внимание: нужно избежать лишнего использования
 
-            // Получаем предсказанную маску (224x224, один канал, от 0 до 1)
-            const unetMask = predictions;
-            const unetMaskArray = unetMask.dataSync();
+        // Создание изображения для маски
+        const maskImageData = cameraCtx.createImageData(224, 224);
 
-            // Создание изображения для маски
-            const maskImageData = cameraCtx.createImageData(224, 224);
-
-            for (let y = 0; y < 224; y++) {
-                for (let x = 0; x < 224; x++) {
-                    const value = unetMaskArray[y * 224 + x] * 255;  // Приведение значений к диапазону [0, 255]
-                    const index = (y * 224 + x) * 4;
-                    maskImageData.data[index + 0] = value;       // R
-                    maskImageData.data[index + 1] = value;       // G
-                    maskImageData.data[index + 2] = value;       // B
-                    maskImageData.data[index + 3] = 100;         // A (прозрачность маски)
-                }
+        for (let y = 0; y < 224; y++) {
+            for (let x = 0; x < 224; x++) {
+                const value = unetMaskArray[y * 224 + x] * 255;  // Приведение значений к диапазону [0, 255]
+                const index = (y * 224 + x) * 4;
+                maskImageData.data[index + 0] = value;       // R
+                maskImageData.data[index + 1] = value;       // G
+                maskImageData.data[index + 2] = value;       // B
+                maskImageData.data[index + 3] = 100;         // A (прозрачность маски)
             }
-
-            // Масштабируем маску до размеров холста (512x512) и накладываем поверх видео
-            cameraCtx.putImageData(maskImageData, 0, 0);
-           // cameraCtx.globalAlpha = 0.5;  // Устанавливаем прозрачность для маски
-            //cameraCtx.drawImage(maskImageData, 0, 0, 512, 512);
-
-            requestAnimationFrame(processVideoFrame); // Повторяем обработку
         }
+
+        // Масштабируем маску до размеров холста (512x512) и накладываем поверх видео
+        cameraCtx.putImageData(maskImageData, 0, 0);
+        
+    } finally {
+        // Явно освобождаем память, чтобы избежать утечек
+        imageTensor.dispose();
+        predictions.dispose();
+    }
+
+    requestAnimationFrame(processVideoFrame); // Повторяем обработку
+}
 
         // Инициализация: загрузка модели и установка камеры
         loadModel().then(setupCamera);
